--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <main></main>
     <footer></footer>
     <!-- <script src="./js/01-ejercicio.js"></script> -->
+     <script src="./js/02-ejercicio.js"></script>
 </body>
 </html>
