se agrego un ejercicio js y el archivo readme

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <main></main>
     <footer></footer>
     <!-- <script src="./js/01-ejercicio.js"></script> -->
-     <script src="./js/02-ejercicio.js"></script>
+     <!-- <script src="./js/02-ejercicio.js"></script> -->
+      <script src="./js/03-ejercicio.js"></script>
 </body>
 </html>
