--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
      <!-- <script src="./js/02-ejercicio.js"></script> -->
       <!-- <script src="./js/03-ejercicio.js"></script> -->
        <!-- <script src="./js/04-ejercicio.js"></script> -->
-        <script src="./js/05-ejercicio.js"></script>
+        <!-- <script src="./js/05-ejercicio.js"></script> -->
 </body>
 </html>
