--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <!-- <script src="./js/05-ejercicio.js"></script> -->
          <!-- <script src="./js/06-ejercicio.js"></script> -->
           <!-- <script src="./js/07-ejercicio.js"></script> -->
-           <script src="./js/08-ejercicio.js"></script>
+           <!-- <script src="./js/08-ejercicio.js"></script> -->
+            <script src="./js/09-ejercicio.js"></script>
 </body>
 </html>
