--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
          <!-- <script src="./js/06-ejercicio.js"></script> -->
           <!-- <script src="./js/07-ejercicio.js"></script> -->
            <!-- <script src="./js/08-ejercicio.js"></script> -->
-            <script src="./js/09-ejercicio.js"></script>
+            <!-- <script src="./js/09-ejercicio.js"></script> -->
+             <!-- <script src="./js/10-ejercicio.js"></script> -->
+              <script src="./js/11-ejercicio.js"></script>
 </body>
 </html>
