--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
            <!-- <script src="./js/08-ejercicio.js"></script> -->
             <!-- <script src="./js/09-ejercicio.js"></script> -->
              <!-- <script src="./js/10-ejercicio.js"></script> -->
-              <script src="./js/11-ejercicio.js"></script>
+              <!-- <script src="./js/11-ejercicio.js"></script> -->
+               <!-- <script src="./js/12-ejercicio.js"></script> -->
 </body>
 </html>
