se termino de agregar los ejercicios del practico

--- a/index.html
+++ b/index.html
@@ -24,5 +24,10 @@
              <!-- <script src="./js/10-ejercicio.js"></script> -->
               <!-- <script src="./js/11-ejercicio.js"></script> -->
                <!-- <script src="./js/12-ejercicio.js"></script> -->
+                <!-- <script src="./js/13-ejercicio.js"></script> -->
+                 <!-- <script src="./js/14-ejercicio.js"></script> -->
+                  <!-- <script src="./js/15-ejercicio.js"></script> -->
+                   <!-- <script src="./js/16-ejercicio.js"></script> -->
+                    <!-- <script src="./js/17-ejercicio.js"></script> -->
 </body>
 </html>
